--- a/platformio.ini
+++ b/platformio.ini
@@ -8,10 +8,21 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32dev]
-platform = espressif32
+
+[env]
+platform = espressif32@ 6.1.0
 board = esp32dev
 framework = arduino
 lib_deps = 
-	esp32async/ESPAsyncWebServer@^3.7.9
-	bblanchon/ArduinoJson@^7.4.2
+	esphome/AsyncTCP-esphome @ ^2.0.0
+	ottowinter/ESPAsyncWebServer-esphome @ ^3.0.0
+check_skip_packages = yes # fixes inspect in platformio
+board_build.partitions = huge_app.csv # not required, increases Flash size for program
+board_build.f_flash = 80000000L
+board_build.filesystem = littlefs
+[env:mydebug]
+build_type = debug
+monitor_speed = 115200 # default esp32
+monitor_filters = esp32_exception_decoder
+build_flags =
+	-DCORE_DEBUG_LEVEL=5 # verbose debug info output on serial
